--- a/report/full.tex
+++ b/report/full.tex
@@ -3,20 +3,19 @@
 The full-node protocol states are {\em sets} of messages,
 each message being a triple $(c, v, j)$, where:
 \begin{itemize}
-    \item $c$ is a (proposed) consensus value
-    \item $v$ identifies the sender of the message
-    \item $j$, the justification, {\em is the protocol state} in which the sender
-        was at the time the message was sent
+    \item $c$ is a (proposed) consensus value;
+    \item $v$ identifies the message sender;
+    \item $j$, the justification, is the {\em protocol state} seen by the sender
+        at the time of message sending.  
 \end{itemize}
 
 There are two technical difficulties with the above definition:  
 \begin{itemize}
-    \item It is recursive (states are sets of messages, each containing a state)
-    \item The ordering of the message should not matter
+    \item States and messages are mutually recursive: states are sets of messages, each containing a state;
+    \item Message ordering should not matter
 \end{itemize}
 
-To solve the first issue, we chose to postpone the definition of messages and
-to define states inductively as follows:
+To solve the first issue, we choose to postpone the definition of messages for now and first define states inductively as follows:
 
 \begin{coq}
 Inductive state : Type :=
@@ -24,11 +23,9 @@ Inductive state : Type :=
   | Next : C ->  V -> state -> state -> state.
 \end{coq}
 
-This definition says that a state can be build by extending an existing state
-given a consensus value (C), a validator (V), and another state representing
-the justification.
-To clarify that the three are the components of a message, we introduce the
-following notation for \verb"Next":
+This definition says that a state can be built by extending an existing state
+given a consensus value \verb|C|, a validator \verb|V|, and another state representing
+the justification. To clarify that the three are the components of a message, we introduce the following notation for \verb"Next":
 
 \begin{coq}
 Notation "'add' ( c , v , j ) 'to' sigma" :=
@@ -36,27 +33,18 @@ Notation "'add' ( c , v , j ) 'to' sigma" :=
   (at level 20).
 \end{coq}
 
-This definitions addresses the first issue mentioned above, that is, the 
-recursive nature of states.
+This definition addresses the first difficulty mentioned above by capturing the recursive nature of states. 
 
-The second issue is very important as it relates to the notion of
-state equality.
-Although it is pottentially possible to define an equivalence between
-states which disregards the order between messages, that is definitely
-not trivial, because it is itself recursive, as it requires an equivalence
-on messages, which must be defined in terms of the same state equivalence.
-This would be a hinderance to both define it and work with it.
+The second issue critical to the notion of state equality. Defining an equivalence between states which disregards message ordering is possible but non-trivial: the definition would itself need to be recursive, as it requires an equivalence
+on messages, which in turn is defined in terms of the same state equivalence.
 
-Our approach was to work with canonical representatives of these classes,
-namely what we called LocallySorted states.  Although this definition
-is still recursive, it's easier to express and to work with it than with the
-equivalence one because it is only defined in terms of a single state.
+To circumvent the hindrance of working with mutually recursive state equality, we instead took the approach of using canonical representatives for states,
+which we call LocallySorted states, on which we express state equality as syntactic equality in Coq.  Although this definition is still recursive, it is easier to express and to work with than with the former equivalence because it is defined in terms of a single state.
 
-To define the notion of sorted states, we need to be able to compare messages,
-which amounts to defining a (total) order relation on states.
+To define sorted states, we need to be able to compare messages,
+which amounts to defining a total order relation on states.
 This can be defined as a lexicographic ordering on the state seen as a list
-of messages, with the tweak of recursing in order to compare justifications:
-
+of messages, tweaked slightly to perform recursion in order to compare justifications:
 \begin{coq}
 Fixpoint state_compare (sigma1 sigma2 : state) : comparison :=
   match sigma1, sigma2 with
@@ -79,24 +67,20 @@ Fixpoint state_compare (sigma1 sigma2 : state) : comparison :=
   end.
 \end{coq}
 
-Note that defining this ordering requires a existing orderings on
-consensus values and validators, but these can any orderings,
-and an total ordering is guaranteed to exists for any set in set theory
-including axiom of choice \cite{Gonzalez}.
+Note that defining this ordering requires that there exist orderings on
+consensus values and validators, but these can be any orderings,
+and a total ordering is guaranteed to exists for any set in set theory
+by the axiom of choice \cite{Gonzalez}. The existence of these orderings is reflected in our \verb|StrictlyComparable| types for consensus values and validators.
     
 This ordering naturally induces an ordering on messages, and thus allows us
-to define the notion of a \verb"LocallySorted" state, i.e., one in which
+to define the notion of a \verb|LocallySorted| state, i.e., one in which
 each message is smaller than the next and all justifications are themselves
-\verb"LocallySorted".
+\verb|LocallySorted|.
 
-\verb"LocallySorted" states are chosen as representatives for states, with the
-benefit that testing equality of such states reduces to checking syntactic
-equality.
+Choosing \verb|LocallySorted| states as representatives for states thus reducing the equality testing between states to syntactic equality checking. 
 
-Protocol states are defined by means of an inductive predicate on states, by
-
+Protocol states are defined by means of an inductive predicate on states as follows:
 \begin{coq}
-(* Valid protocol state definition *) 
 Inductive protocol_state : state -> Prop :=
   | protocol_state_empty : protocol_state Empty
   | protocol_state_next
@@ -116,9 +100,8 @@ The above definition reads as:
     \item it can be obtained from an existing protocol state $s$ by extending
         it with a message $(c, v, j)$ such that:
         \begin{itemize}
-            \item $j$ is a protocol state included in $s$
-            \item $c$ is a consensus values which can be estimated by $j$
-            \item adding $(c,v,j)$ to $s$ does not produce a heavy state
+            \item $j$ is a protocol state included in $s$;
+            \item $c$ is a consensus value which the estimator agrees on for $j$;
+            \item adding $(c,v,j)$ to $s$ does not exceed the fault tolerance threshold.
         \end{itemize}
 \end{itemize}
-
