--- a/report/light.tex
+++ b/report/light.tex
@@ -1,46 +1,44 @@
 \subsection{States, hashes, messages, representatives}
 
-The light-node protocol states are also sets of messages,
+Light node protocol states are also sets of messages,
 each message being a triple $(c, v, j)$, where:
 \begin{itemize}
-    \item $c$ is a (proposed) consensus value
-    \item $v$ identifies the sender of the message
+    \item $c$ is a (proposed) consensus value;
+    \item $v$ identifies the message sender;
     \item $j$, the justification, is the {\em set of hashes} of all messages
-        of the protocol state in which the sender was at the time the message
-        was sent
+        of the protocol state seen by the sender at the time of message
+        sending.
 \end{itemize}
 
-The fact that justification is a set of hashes allows for a simpler,
-non-recursive definition. To begin, the type of hashes can be any
-totally ordered set, a justification can be a list of hashes, and
-a message is now just a triple:
+The fact that justifications are sets of hashes allows for a simpler,
+non-recursive definition of states. To begin, the type of hashes can be any
+totally ordered set. In turn, a justification is a list of hashes, and
+a message is a triple:
 
 \begin{coq}
 Variable hash : Type.
 Variable (about_H : `{StrictlyComparable hash}). 
-
 Definition justification_type : Type := list hash. 
-
 Definition message : Type := C * V * justification_type.
 \end{coq}
 
 The total order on hashes induces a total lexicographic order on
 justifications, which can be extended to messages.
 
-We therefore can work with sorted lists of hashes as representatives
+We can therefore work with sorted lists of hashes as representatives
 for sets of hashes, reducing equality between justifications to
 syntactic equality.
 
-For states we prefer to define equality as set-equality, that is
+We define state equality set equality, that is,
 double inclusion between the sets of messages representing states.
 
-Assuming an injective function from messages to hashes,
+We assume an injective function from messages to hashes: 
 \begin{coq}
 Parameters (hash_message : message -> hash)
            (hash_message_injective : Injective hash_message).
 \end{coq}    
-we can recursively define a function \verb"hash_state" taking 
-states to sorted lists of hashes, i.e., justifications, with the
+This allows us to recursively define a function \verb"hash_state" taking
+states and returning sorted lists of hashes, i.e., justifications, with the
 property that two justifications are equal iff they belong to 
 states which are equal as sets:
 
@@ -62,7 +60,8 @@ Inductive protocol_state : state -> Prop :=
       valid_estimate c j ->
       forall (v : V) (s : state),
         In (c, v, hash_state j) s ->
-        protocol_state (set_remove compare_eq_dec (c, v, hash_state j) s) ->
+        protocol_state (set_remove compare_eq_dec 
+        													(c, v, hash_state j) s) ->
         NoDup s ->
         not_heavy s ->
         protocol_state s.
@@ -71,14 +70,13 @@ Inductive protocol_state : state -> Prop :=
 The above definition reads as:
 \begin{itemize}
     \item a protocol state is either empty; or
-    \item it is a non-heavy, non-duplicate state $s$ for which
-        there exist a consensus value $c$, a sender $V$, and a state $j$ such that:
+    \item it is a duplicate-free state \verb|s| that does not exceed the fault tolerance threshold for which
+        there exists a consensus value \verb|c|, a sender \verb|v|, and a state \verb|j| such that:
         \begin{itemize}
-            \item $j$ is a protocol state
-            \item $c$ is a consensus values which can be estimated by $j$
-            \item $(c,v, \texttt{hash\_state}\  j)$ belongs to $s$
-            \item The state obtained from $s$ by removing
-                $(c,v, \texttt{hash\_state}\  j)$ is a protocol state.
+            \item \verb|j| is a protocol state;
+            \item \verb|c| is a consensus value which the estimator agrees on for \verb|j|;
+            \item \verb|(c,v, hash_state j)| belongs to \verb|s|;
+            \item The state obtained from \verb|s| by removing
+                \verb|(c,v, hash_state j)| is a protocol state.
         \end{itemize}
 \end{itemize}
-
