edited design choices

--- a/report/main.tex
+++ b/report/main.tex
@@ -142,15 +142,15 @@ In the second section we describe our formalization. We present our abstraction 
 
 In the third section we present formalizations of two concrete protocols: a full node and light node version of CBC Casper, as described in \cite{CBCfull} and \cite{CBClight} respectively. We show how our concrete definitions instantiate an abstract type class. We highlight parameters in the type class that are instantiated differently between the full and light node versions, and explain how this reflects the essential differences between the protocols. In doing so, we illustrate how using type classes as an abstraction mechanism allows us to separate concerns between theory and implementation. 
 
-In the fourth section we present a new proof of a protocol property, which we call strong non-triviality, for both the full node and light node protocols. We highlight how our abstraction hierarchy invites a precise mathematical characterization of CBC Casper, which paves the way for us to look for and prove stronger properties. We discuss our ongoing attempts at refining our abstraction hierarchy. 
+In the fourth section we present a new proof of a protocol property which we call strong non-triviality, for both the full node and light node protocols. We highlight how our abstraction hierarchy invites a precise mathematical characterization of CBC Casper, which paves the way for us to look for and prove stronger properties. We discuss our ongoing attempts at refining our abstraction hierarchy. 
 
 In the final section, we discuss related work, and conclude. 
 
 
 \section{Design choices} 
-A salient property of the CBC Casper family of protocols, as captured in its ``correct-by-construction'' namesake, is that desirable properties such as safety and liveness are guaranteed independently of the specific details of each protocol, such as information about nodes, consensus values, etc. However, these properties do rely on certain implicit or explicit assumptions about the parameters used to complete the partial specification of any CBC Casper protocol. Our goal was to both formalize and generalize the existing partial specification of CBC Casper protocols. Our design choices primarily aimed at making these assumptions explicit. Subsequently, we wished to characterize these assumptions and properties in general mathematical terms, abstracting away from protocol-specific language. This required us to precisely pinpoint the minimal assumptions required for each desirable property and formulate a suitable abstraction to highlight the relationship between assumptions and derivable properties. 
+A salient property of the CBC Casper family of protocols, as captured in its ``correct-by-construction'' namesake, is that desirable protocol properties such as safety and liveness are guaranteed independently of its choice of parameters. However, these properties do rely on certain implicit or explicit assumptions about the parameters used to fully specify any CBC Casper protocol. Our primary aim was to make these assumptions explicit. Additionally, we wished to thoroughly investigate the implications of these protocol parameters. Towards these ends, we chose to characterize assumptions and properties in general mathematical terms, and abstract away from protocol-specific language. This allowed us to precisely pinpoint the minimal assumptions required for each desirable property. 
 
-Towards these ends, we choose to represent the CBC Casper family of protocols using Coq type classes. Our reasons are twofold: 1) the relationship between type class and instance aptly reflects the relationship between protocol family and member; 2) Coq's type inference mechanism allows us to organize typeclasses in relation with one another and thereby elucidate the relationship between assumptions and properties. We present the our formalization using type classes in the following section. 
+We found Coq's type classes to be a suitable abstraction to present our findings. Our reasons are twofold: 1) the relationship between type class and instance aptly reflects the relationship between protocol family and member; 2) Coq's type inference mechanism allows us to organize typeclasses in relation with one another and thereby elucidate the relationship between assumptions and properties. We present the our formalization using type classes in the following section. 
 
 \section{Formalization}
 \label{sec:formalization}
